# rvecsim

./: .gitignore  CLAUDE.md  Cargo.toml  GIL_EXPLAINED.md  GIL_FINDINGS.md  GIL_RELEASE_OPTIMIZATION.md  README.md  benchmark_overhead_v2.py  benchmark_python.py  explain_overhead.md  pyproject.toml  test_gil_impact.py  test_parallelism.py  test_python_bindings.py
src/: lib.rs  main.rs  python.rs
