[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rvecsim"
version = "0.1.0"
description = "Quantum vector state simulator in Rust with Python bindings"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3"]
module-name = "rvecsim"
